--- a/index.html
+++ b/index.html
@@ -1,77 +1,148 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GlowUp Skincare</title>
-    <meta name="description" content="Toko online menjual produk perawatan kulit berkualitas tinggi dan aman digunakan.">
+    <title>Toko Kecantikan dan Kesehatan</title>
 
-    <!-- JSON-LD untuk Profil Perusahaan (Schema.org) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "GlowUp Skincare",
-      "url": "https://username.github.io/glowup-skincare",
-      "logo": "https://username.github.io/glowup-skincare/logo.png",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+62-812-3456-7890",
-        "contactType": "Customer Service",
-        "areaServed": "ID",
-        "availableLanguage": ["Indonesian", "English"]
-      },
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Jl. Sehat No. 45",
-        "addressLocality": "Bandung",
-        "addressRegion": "Jawa Barat",
-        "postalCode": "40123",
-        "addressCountry": "ID"
-      },
-      "openingHours": "Mo-Sa 09:00-18:00"
-    }
-    </script>
+    <!-- CSS Ditulis Langsung di File HTML -->
+    <style>
+        /* Menata Body */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
 
-    <!-- JSON-LD untuk Informasi Pribadi (Portfolio Mahasiswa) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "MUHAMMAD RIDWAN ROSYID",
-      "additionalName": "23050553",
-      "alumniOf": {
-        "@type": "CollegeOrUniversity",
-        "name": "Universitas Yatsi Madani",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Jl. Kampus No. 1",
-          "addressLocality": "Bandung",
-          "addressRegion": "Jawa Barat",
-          "postalCode": "40123",
-          "addressCountry": "ID"
-        },
-        "telephone": "+62-22-1234-5678"
-      },
-      "worksFor": {
-        "@type": "Organization",
-        "name": "GlowUp Skincare"
-      },
-      "url": "https://username.github.io/glowup-skincare"
-    }
-    </script>
+        /* Header */
+        header {
+            background-color: #3b5998;
+            color: white;
+            padding: 20px 0;
+        }
+
+        /* Menata Produk */
+        .produk {
+            display: inline-block;
+            width: 30%;
+            padding: 20px;
+            box-sizing: border-box;
+            margin: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .produk img {
+            width: 100%;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s;
+        }
+
+        .produk img:hover {
+            transform: scale(1.05); /* Efek zoom saat hover */
+        }
+
+        /* Menata Teks Produk */
+        .produk h3 {
+            color: #333;
+            font-size: 20px;
+            margin-top: 10px;
+        }
+
+        .produk p {
+            color: #555;
+            font-size: 16px;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #3b5998;
+            color: white;
+            padding: 10px 0;
+            font-size: 14px;
+            margin-top: 30px;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Selamat Datang di GlowUp Skincare</h1>
-    <p>Temukan berbagai produk perawatan kulit untuk kulit sehat dan bercahaya.</p>
+    <header>
+        <h1>Selamat Datang di Toko Kecantikan dan Kesehatan Kami!</h1>
+        <p>Temukan produk kecantikan dan kesehatan terbaik untuk Anda</p>
+    </header>
 
-    <h2>Produk Unggulan Kami</h2>
-    <ul>
-        <li>Masker Wajah Organik</li>
-        <li>Serum Anti-Aging</li>
-        <li>Pelembap untuk Kulit Kering</li>
-    </ul>
+    <section>
+        <h2>Produk Kecantikan Kami</h2>
 
-    <p>Hubungi kami di <strong>+62-812-3456-7890</strong> atau kunjungi toko kami di <em>Jl. Sehat No. 45, Bandung</em>.</p>
+        <!-- Produk 1 -->
+        <div class="produk">
+            <img src="produk1.jpg.jpg" alt="Produk 1" width="300">
+            <h3>Aloevera</h3>
+            <p>Deskripsi produk kecantikan yang sangat bagus dan bermanfaat.</p>
+            <p>Harga: Rp 100.000</p>
+        </div>
+
+        <!-- Produk 2 -->
+        <div class="produk">
+            <img src="produk2.jpg.jpg" alt="Produk 2" width="300">
+            <h3>Whitening body serum</h3>
+            <p>Deskripsi produk kecantikan yang sangat bagus dan bermanfaat.</p>
+            <p>Harga: Rp 150.000</p>
+        </div>
+
+        <!-- Produk 3 -->
+        <div class="produk">
+            <img src="produk3.jpg.jpg" alt="Produk 3" width="300">
+            <h3>Premium ION Nano pendant</h3>
+            <p>Deskripsi produk kecantikan yang sangat bagus dan bermanfaat.</p>
+            <p>Harga: Rp 200.000</p>
+        </div>
+
+         <!-- Produk 4 -->
+        <div class="produk">
+            <img src="produk4.jpg.jpg" alt="Produk 4" width="300">
+            <h3>Beauty spray</h3>
+            <p>Deskripsi produk kecantikan yang sangat bagus dan bermanfaat.</p>
+            <p>Harga: Rp 200.000</p>
+        </div>
+
+         <!-- Produk 5 -->
+         <div class="produk">
+            <img src="produk5.jpg.jpg" alt="Produk 5" width="300">
+            <h3>Soft & Smooth Sunscreen</h3>
+            <p>Deskripsi produk kecantikan yang sangat bagus dan bermanfaat.</p>
+            <p>Harga: Rp 200.000</p>
+        </div>
+
+         <!-- Produk 6 -->
+         <div class="produk">
+            <img src="produk6.jpg.jpg" alt="Produk 6" width="300">
+            <h3>Natura biz</h3>
+            <p>Deskripsi produk kecantikan yang sangat bagus dan bermanfaat.</p>
+            <p>Harga: Rp 200.000</p>
+        </div>
+        
+        <!-- Produk 7 -->
+        <div class="produk">
+            <img src="produk7.jpg.jpg" alt="Produk 7" width="300">
+            <h3>Chocolate Facial Foam</h3>
+            <p>Deskripsi produk kecantikan yang sangat bagus dan bermanfaat.</p>
+            <p>Harga: Rp 200.000</p>
+        </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>Hubungi kami: 08123456789 | Email: info@tokokecantikan.com</p>
+        <p>Alamat: Jl. Kecantikan No. 123, Jakarta</p>
+        <p>&copy; 2024 Toko Kecantikan dan Kesehatan</p>
+    </footer>
 </body>
+
 </html>
